--- a/assignment_2/assign_2_sigrid.Rmd
+++ b/assignment_2/assign_2_sigrid.Rmd
@@ -16,7 +16,8 @@ pacman::p_load(tidyverse,
         here,
         posterior,
         cmdstanr,
-        brms, tidybayes, future, purrr, furrr)
+        brms, tidybayes, future, purrr, furrr,
+        boot)
 ```
 
 # FUNCTIONS
@@ -91,6 +92,104 @@ sim_vs_random <- function(agents, trials, bias_lose, bias_win){
 }
 ```
 
+# PLotting sim vs random outcome!
+```{r}
+# simulating
+temp <-  sim_vs_random(agents = 100,
+                           trials = 150, 
+                           bias_lose = .9,
+                           bias_win = .7)
+```
+
+```{r}
+# choosing only the relevant trials - 3 is just a placeholder to get rid of 
+preds <- temp %>% mutate(
+  LL_next = ifelse(self == 0 & feedback == 0, lead(self), 3),
+  WL_next = ifelse(self == 0 & feedback == 1, lead(self), 3),
+  LR_next = ifelse(self == 1 & feedback == 0, lead(self), 3),
+  WR_next = ifelse(self == 1 & feedback == 1, lead(self), 3) 
+) %>% select("LL_next", "WL_next", "LR_next", "WR_next") 
+
+# LL_next
+p1 <- preds %>% select(LL_next) %>% filter(LL_next == 0 | LL_next == 1) %>% # here, we are losing the 3
+  mutate(
+    LL_next = as.factor(LL_next)
+  ) %>% 
+  ggplot() + 
+  aes(x = LL_next) + 
+  geom_bar(
+    color = 'blue',
+    fill = 'blue',
+    stat = "count", 
+    width = 0.5
+  ) +
+  labs(title = "Losing left - next choice is 0 (left)") +
+  coord_cartesian(ylim = c(0,15000))
+
+# WL_next
+p2 <- preds %>% select(WL_next) %>% filter(WL_next == 0 | WL_next == 1) %>% 
+  mutate(
+    WL_next = as.factor(WL_next)
+  ) %>% 
+  ggplot() + aes(WL_next) + 
+  geom_bar(
+    color = 'blue',
+    fill = 'blue',
+    stat = "count", 
+    width = 0.5
+  ) +
+  labs(title = "Winning left - next choice is 1 (right)") + 
+  coord_cartesian(ylim = c(0,15000))
+
+# LR_next
+#p3 <- 
+p3 <- preds %>% select(LR_next) %>% filter(LR_next == 0 | LR_next == 1) %>% 
+  mutate(
+    LR_next = as.factor(LR_next)
+  ) %>% 
+  ggplot() + aes(LR_next) + 
+  geom_bar(
+    color = 'blue',
+    fill = 'blue',
+    stat = "count", 
+    width = 0.5
+  ) + 
+  labs(title = "Losing right - next choice is 1 (right)") + 
+  coord_cartesian(ylim = c(0,15000))
+
+# WR_next
+p4 <- preds %>% select(WR_next) %>% filter(WR_next == 0 | WR_next == 1) %>% 
+  mutate(
+  WR_next = as.factor(WR_next)
+  ) %>% 
+  ggplot() + 
+  aes(x = WR_next) + 
+  geom_bar(  
+    color = 'blue',
+    fill = 'blue',
+    stat = "count", 
+    width = 0.5) + 
+  labs(title = "Winning right - next choice is 0 (left)") + 
+  coord_cartesian(ylim = c(0,15000))
+
+(p1 | p2) /
+(p3 | p4) + plot_annotation(
+  title = "Checking simulated data",
+  theme = theme(plot.title = element_text(hjust = 0.5)
+                )
+  )
+```
+```{r}
+# count number of 1 and 0 in preds - meget analogt, sorry
+# så count hvor mange gange, man har eks. valgt venstre og tabt
+preds %>% count(LL_next == 1 | LL_next == 0) # 6754 ud af 15,000 ~ 45%
+preds %>% count(LR_next == 1 | LR_next == 0) # 1633 ud af 15,000 ~ 11% # weird
+
+preds %>% count(WL_next == 1 | WL_next == 0) # 2882 ud af 15,000 ~ 19%
+preds %>% count(WR_next == 1 | WR_next == 0) # 3730 ud af 15,000 ~ 25%
+
+```
+
 
 ```{r simulation and fitting function}
 
@@ -104,12 +203,12 @@ sim_d_and_fit <- function(seed, trials, bias_win, bias_lose) {
   
   data <-  list(
     t = trials,
-    choice = lag(temp$self, 1),
+    choice = lead(temp$self, 1),
     self = temp$self,
     other = temp$bot
   )
   
-  data$choice[1] <- 0
+  data$choice[t] <- 0
 
   samples <- model$sample(
     data = data,
@@ -159,10 +258,203 @@ model <- cmdstan_model(file,
 
 ```
 
-
 ```{r test fitting}
 test <- sim_d_and_fit(seed = 1000, trials = 100, bias_win = 0.7, bias_lose = 0.9)
 ```
+
+# plotting time!! win stay vs. random agent 
+# prior and posterior updates
+```{r}
+pacman::p_load(boot, ggpubr)
+# bias win
+p1 <- ggplot(test) +
+  geom_density(aes(bias_winEst), fill="blue", alpha=0.3) +
+  geom_density(aes(inv.logit(bias_win_prior)), fill="red", alpha=0.3) + # inv.logit bias_win_prior
+  xlab("Rate") + # Tendency to choose 1 ??
+  ylab("Posterior Density") +
+  theme_classic() + 
+  labs(title = "Bias win")+
+  coord_cartesian(xlim = c(0,1)) + 
+  geom_point(x = unique(test$bias_winTrue), y = 0, color = "red", shape = 17, size = 5)
+
+
+# bias lose
+p2 <- ggplot(test) +
+  geom_density(aes(bias_loseEst), fill="blue", alpha=0.3) +
+  geom_density(aes(inv.logit(bias_lose_prior)), fill="red", alpha=0.3) + # inv.logit bias_lose_prior
+  xlab("Rate") +
+  ylab("Posterior Density") +
+  theme_classic() + 
+  labs(title = "Bias lose") + 
+  coord_cartesian(xlim = c(0,1)) + 
+  geom_point(x = unique(test$bias_loseTrue), y = 0, color = "red", shape = 17, size = 5)
+
+temp = ggarrange(p1, p2)
+#annotate_figure(temp, fig.lab = "Prior-posterior update checks")
+temp
+ggsave("plots/model_pp_update.png", width = 1300, height = 700, units = 'px', dpi = 150)
+# 2000 1150
+```
+Remember, win-shift! not sure the above plot makes sense? given the bias should change given the choice.. i.e., pull in different directions.
+
+```{r}
+# prior and post predictions - when losing and choosing left/0
+
+p1 <- ggplot(test) + 
+  geom_histogram(aes(prior_preds_LL), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_LL), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted right (1) choices out of 100 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Choice after agent chose left (0) and lost") + 
+  coord_cartesian(xlim = c(0,100))
+
+
+p2 <- ggplot(test) + 
+  geom_histogram(aes(prior_preds_LR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_LR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+  #geom_point(x = 0.9*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted right (1) choices out of 100 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Choice after agent chose right (1) and lost") + 
+  coord_cartesian(xlim = c(0,100))
+
+# prior and post predictions - when winning
+
+p3 <- ggplot(test) + 
+  geom_histogram(aes(prior_preds_WL), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_WL), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+ # geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted right (1) choices out of 100 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Choice after agent chose left (0) and won") + 
+  coord_cartesian(xlim = c(0,100))
+
+p4 <- ggplot(test) + 
+  geom_histogram(aes(prior_preds_WR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_WR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+ # geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted right (1) choices out of 100 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Choice after agent chose right (1) and won") + 
+  coord_cartesian(xlim = c(0,100))
+
+
+
+ggarrange(p1, p2, p3, p4, common.legend = TRUE)
+
+#ggsave("plots/pp_predict.png", width = 1300, height = 600, units = 'px', dpi = 150)
+# 2000 1150
+```
+So, the agent loses and has a stronger tendency to stay a their choice when losing. So the posterior distribution is pulled towards 0, which was the choice where the agent lost. 
+
+
+But according to the above explanation this distribution should be pulled towards 1.... 
+
+
+```{r}
+ggplot(test) + 
+  geom_histogram(aes(prior_preds_WR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_WR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+#  geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 120 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Prior and posterior predicted choices when the agent choses 1 and wins") + 
+  coord_cartesian(xlim = c(0,100))
+
+```
+# Prior sensitivity check 
+
+```{r import model}
+## Specify where the model is
+file2 <- file.path("model1_prior_sensitivity.stan")
+model <- cmdstan_model(file2, 
+                     cpp_options = list(stan_threads = TRUE),
+                     stanc_options = list("O1")) 
+
+```
+
+```{r}
+prior_mean_bias_win <- 0
+prior_sd_bias_win <- seq(0.1, 0.5, 0.1)
+prior_mean_bias_lose <- 0
+prior_sd_bias_lose <- seq(0.1, 0.5, 0.1)
+priors <-  tibble(
+  expand.grid(
+    tibble(
+      prior_mean_bias_win, prior_sd_bias_win, prior_mean_bias_lose, prior_sd_bias_lose)))
+
+```
+
+```{r}
+pacman::p_load(future, purrr, furrr)
+plan(multisession, workers = 4)
+
+sim_d_and_fit_prior_sensitivity <- function(
+    prior_mean_bias_win, prior_sd_bias_win, prior_mean_bias_lose, prior_sd_bias_lose) {
+    for (t in seq(100)) {
+    temp <-  sim_vs_random(agents = 1,
+                           trials = 100, 
+                           bias_lose = 0.9,
+                           bias_win = 0.7)
+    }
+  
+    data <-  list(
+    t = 100,
+    choice = lead(temp$self, 1),
+    self = temp$self,
+    other = temp$bot,
+    prior_mean_bias_win = prior_mean_bias_win,
+    prior_sd_bias_win = prior_sd_bias_win,
+    prior_mean_bias_lose = prior_mean_bias_lose,
+    prior_sd_bias_lose = prior_sd_bias_lose
+  )
+  
+  data$choice[100] <- 0 # change this!
+    
+    samples <- model$sample(
+      data = data,
+      seed = 1000,
+      chains = 1,
+      parallel_chains = 1,
+      threads_per_chain = 1,
+      iter_warmup = 1000,
+      iter_sampling = 2000,
+      refresh = 0,
+      max_treedepth = 20,
+      adapt_delta = 0.99
+    )
+    
+    draws_df <- as_draws_df(samples$draws())
+      temp <- tibble(
+                    bias_winEst = draws_df$bias_win_posterior,
+                    bias_loseEst = draws_df$bias_lose_posterior,
+                   # bias_winTrue = bias_win,
+                    #bias_loseTrue = bias_lose,
+                    bias_win_prior = draws_df$bias_win_prior,
+                    bias_lose_prior = draws_df$bias_lose_prior,
+                    prior_mean_bias_win = prior_mean_bias_win,
+                    prior_sd_bias_win = prior_sd_bias_win,
+                    prior_mean_bias_lose = prior_mean_bias_lose,
+                    prior_sd_bias_lose = prior_sd_bias_lose)
+
+  return(temp)
+
+}
+
+testtest <- sim_d_and_fit_prior_sensitivity(0,0.5,0,0.5)
+
+recovery_df <- future_pmap_dfr(priors, sim_d_and_fit_prior_sensitivity, .options = furrr_options(seed = TRUE))
+
+#write_csv(recovery_df, "simdata/W4_MemoryPriorSensitivity.csv")
+
+```
+
 
 # Parameter recovery
 ```{r}
@@ -184,6 +476,7 @@ recovery_df <- future_pmap_dfr(temp, sim_d_and_fit, .options = furrr_options(see
 
 
 ```{r}
+# parameter recovery plots 
 p1 <- ggplot(recovery_df, aes(bias_winTrue, bias_winEst)) + 
   geom_point(alpha = 0.1) + 
   geom_smooth() +
@@ -194,7 +487,6 @@ p1 <- ggplot(recovery_df, aes(bias_winTrue, bias_winEst)) +
     intercept = 0,
     color = "red") +
   coord_cartesian(ylim = c(0,1))
-# + facet_wrap(.~bias_loseTrue) # not sure it makes sense to plot with a facetwrap 
 
 p2 <- ggplot(recovery_df, aes(bias_loseTrue, bias_loseEst)) +
   geom_point(alpha = 0.1) + 
@@ -208,10 +500,9 @@ p2 <- ggplot(recovery_df, aes(bias_loseTrue, bias_loseEst)) +
   coord_cartesian(ylim = c(0,1))
 
 p1 + p2
-# looks weird, I suspect the scale of the estimated values needs to be fixed 
 ```
 
-# Parameter recovery with conversion from log odds to probabilies 
+# Parameter recovery with conversion from log odds to probabilies - not needed anymore 
 ```{r}
 # converting log odds to probabilities the analogue way 
 # inv.logit() from the "boot" package does exactly the same 
@@ -225,91 +516,124 @@ p1 + p2
   #)
 ```
 
-# plotting time!! win stay vs. random agent 
-# posterior + priors 
+# plotting the different prior preds and post preds based on different parameter values of bias winTrue and bias_loseTrue, respectively. 
+
+## changing bias_winTrue, keeping bias_loseTrue fixed
 ```{r}
-pacman::p_load(boot)
-# bias win
-ggplot(test) +
-  geom_density(aes(bias_winEst), fill="blue", alpha=0.3) +
-  geom_density(aes(inv.logit(bias_win_prior)), fill="red", alpha=0.3) +
-  xlab("Rate") + # Tendency to choose 1 ??
-  ylab("Posterior Density") +
+# win left
+recovery_df %>% filter(bias_loseTrue == 0.9) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
+  geom_histogram(aes(prior_preds_WL), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_WL), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
+  ylab("Density") +
   theme_classic() + 
-  labs(title = "Bias win")+
-  coord_cartesian(xlim = c(0,1))
+  labs(title = "Prior and posterior predicted choices when the agent choses 0 and wins", 
+       subtitle = "Bias_loseTrue is fixed at 0.9, bias_winTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_winTrue)
 
-# bias lose
-ggplot(test) +
-  geom_density(aes(bias_loseEst), fill="blue", alpha=0.3) +
-  geom_density(aes(inv.logit(bias_lose_prior)), fill="red", alpha=0.3) +
-  xlab("Rate") +
-  ylab("Posterior Density") +
+# win right
+recovery_df %>% filter(bias_loseTrue == 0.9) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
+  geom_histogram(aes(prior_preds_WR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_WR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
+  ylab("Density") +
   theme_classic() + 
-  labs(title = "Bias lose") + 
-  coord_cartesian(xlim = c(0,1))
+  labs(title = "Prior and posterior predicted choices when the agent choses 1 and wins", 
+       subtitle = "Bias_loseTrue is fixed at 0.9, bias_winTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_winTrue)
 
-```
-Remember, win-shift! not sure the above plot makes sense? given the bias should change given the choice.. i.e., pull in different directions.
+# lose right - these shouldn't change right?? ...... 
+recovery_df %>% filter(bias_loseTrue == 0.9) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
+  geom_histogram(aes(prior_preds_LR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_LR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Prior and posterior predicted choices when the agent choses 1 and loses",
+       subtitle = "Bias_loseTrue is fixed at 0.9, bias_winTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_winTrue)
 
-```{r}
-# prior and post predictions - when losing and choosing left/0
-
-ggplot(test) + 
+# lose left - these shouldn't change right?? ...... 
+recovery_df %>% filter(bias_loseTrue == 0.9) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
   geom_histogram(aes(prior_preds_LL), color="lightblue", fill="blue", alpha=0.3, bins=90) +
   geom_histogram(aes(post_preds_LL), color="darkblue", fill="blue", alpha=0.3, bins=90) +
   #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
   xlab("Predicted heads out of 100 trials") +
   ylab("Density") +
   theme_classic() + 
-  labs(title = "Prior and posterior predicted choices when the agent choses 0 and loses") + 
-  coord_cartesian(xlim = c(0,100))
+  labs(title = "Prior and posterior predicted choices when the agent choses 0 and loses", 
+       subtitle = "Bias_loseTrue is fixed at 0.9, bias_winTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_winTrue)
 ```
-So, the agent loses and has a stronger tendency to stay a their choice when losing. So the posterior distribution is pulled towards 0, which was the choice where the agent lost. 
 
-```{r} 
-
-ggplot(test) + 
+## changing bias_loseTrue, keeping bias_winTrue fixed
+```{r}
+# lose right 
+recovery_df %>% filter(bias_winTrue == 0.8) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
   geom_histogram(aes(prior_preds_LR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
   geom_histogram(aes(post_preds_LR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
-  #geom_point(x = 0.9*100, y = 0, color = "red", shape = 17, size = 5) +
-  xlab("Predicted heads out of 120 trials") +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
   ylab("Density") +
   theme_classic() + 
-  labs(title = "Prior and posterior predicted choices when the agent choses 1 and loses") + 
-  coord_cartesian(xlim = c(0,100))
+  labs(title = "Prior and posterior predicted choices when the agent choses 1 and loses",
+       subtitle = "Bias_winTrue is fixed at 0.8, bias_loseTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_loseTrue)
 
+# lose left  
+recovery_df %>% filter(bias_winTrue == 0.8) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
+  geom_histogram(aes(prior_preds_LL), color="lightblue", fill="blue", alpha=0.3, bins=90) +
+  geom_histogram(aes(post_preds_LL), color="darkblue", fill="blue", alpha=0.3, bins=90) +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
+  ylab("Density") +
+  theme_classic() + 
+  labs(title = "Prior and posterior predicted choices when the agent choses 0 and loses",
+       subtitle = "Bias_winTrue is fixed at 0.8, bias_loseTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_loseTrue)
 
-```
-But according to the above explanation this distribution should be pulled towards 1.... 
-
-```{r}
-# prior and post predictions - when winning
-
-ggplot(test) + 
+# win left
+recovery_df %>% filter(bias_winTrue == 0.8) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
   geom_histogram(aes(prior_preds_WL), color="lightblue", fill="blue", alpha=0.3, bins=90) +
   geom_histogram(aes(post_preds_WL), color="darkblue", fill="blue", alpha=0.3, bins=90) +
- # geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
-  xlab("Predicted heads out of 120 trials") +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
   ylab("Density") +
   theme_classic() + 
-  labs(title = "Prior and posterior predicted choices when the agent choses 0 and wins") + 
-  coord_cartesian(xlim = c(0,100))
+  labs(title = "Prior and posterior predicted choices when the agent choses 0 and wins",
+       subtitle = "Bias_winTrue is fixed at 0.8, bias_loseTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_loseTrue)
 
-```
-
-
-```{r}
-
-ggplot(test) + 
+# win right
+recovery_df %>% filter(bias_winTrue == 0.8) %>% ## keeping bias_loseTrue fixed!!
+  ggplot() +
   geom_histogram(aes(prior_preds_WR), color="lightblue", fill="blue", alpha=0.3, bins=90) +
   geom_histogram(aes(post_preds_WR), color="darkblue", fill="blue", alpha=0.3, bins=90) +
-#  geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
-  xlab("Predicted heads out of 120 trials") +
+  #geom_point(x = 0.7*100, y = 0, color = "red", shape = 17, size = 5) +
+  xlab("Predicted heads out of 100 trials") +
   ylab("Density") +
   theme_classic() + 
-  labs(title = "Prior and posterior predicted choices when the agent choses 1 and wins") + 
-  coord_cartesian(xlim = c(0,100))
+  labs(title = "Prior and posterior predicted choices when the agent choses 1 and wins",
+       subtitle = "Bias_winTrue is fixed at 0.8, bias_loseTrue varies") + 
+  coord_cartesian(xlim = c(0,100)) +
+  facet_wrap(~bias_loseTrue)
+
 
 ```
-
