--- a/A3/A3.Rmd
+++ b/A3/A3.Rmd
@@ -9,22 +9,99 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+pacman::p_load(tidyverse,
+        here,
+        posterior,
+        cmdstanr,
+        brms, 
+        tidybayes, 
+        future, 
+        purrr, 
+        furrr,
+        boot,
+        tidyr,
+        patchwork,
+        boot,
+        ggpubr)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+simpleBayes_f <- function(bias, self1, other){
+  outcome <- inv_logit_scaled(bias + 0.5*logit_scaled(self1) +0.5*logit_scaled(other))
+  
+  return(outcome)
+}
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+# values
+bias <- 0
+trials <- 10
+self1 <- round(inv_logit_scaled(rnorm(trials, 0.3, 0.5))*9, 0)
+
+# make other based on feedback sampling 
+other_f <- function(trials, self1_var){
+  feedback <- rep(NA, trials)
+  other <- rep(NA, trials)
+  trial_no <- rep(NA, trials)
+
+  for (i in 1:trials){
+  feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
+  #print(feedback[i])
+  #print(self1[i])
+  other[i] = self1[i] + feedback_temp
+  
+  while (other[i]>8 || other[i]<1){
+    feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
+    other[i] = self1[i] + feedback_temp
+  }
+  feedback[i] = feedback_temp
+  trial_no[i] = i
+  }
+  
+  temp <- tibble(trial_no, self1, other, feedback)
+  
+  return(temp)
+}
+
+# test function
+other_test <- other_f(trials, self1)
+```
+
+
+```{r}
+# divide self1 og other by 9
+
+self_prop = other_test$self1/9
+other_prop = other_test$other/9
+
+self_prop2 <- simpleBayes_f(bias, self_prop, other_prop)
+
+new_df <- tibble(self_prop, other_prop, self_prop2)
+new_df <- new_df %>% mutate(
+  self_r1 = round(self_prop*9,0),
+  other_choice = round(other_prop*9,0),
+  self_r2 = round(self_prop2*9,0)
+)
+
+```
+
+
+```{r}
+
+```
+
+choose a random feedback between -3, -2, 0, 2, 3
+that is the rating of the other agent 
+if not a possible number, do it again
+
+self 2 is to some extent influenced by feedback
+change = the difference between self 1 and self 2
+regression to the mean = the self 1 affects change as well as feedback does 
+
+```{r}
+
+```
+
